# cookie_cutter

./: .gitmodules  README.md  cookiecutter.json  main.py  pyproject.toml  requirements.txt  torch_requirements.txt
lst/: requirements.txt
lst/deploy/docker/: BaseDockerFile
lst/nuhs_lst/: db_manager.py
lst/nuhs_lst/kafka/: consumer.py
lst/user_dir/: agimodel.py  lst_model.py
{{cookiecutter.repo_name}}/: .gitignore  project.yaml  pyproject.toml  requirements.txt  torch_requirements.txt
{{cookiecutter.repo_name}}/deploy/docker/: AppDockerFile
{{cookiecutter.repo_name}}/deploy/k8/: sample_dev_agilos_app.yaml
{{cookiecutter.repo_name}}/deploy/k8/production_yaml/: 01-agilos-app-secrets.yaml  03-agilos-deployments.yaml
{{cookiecutter.repo_name}}/docs/: los_deployment_v2.docx
{{cookiecutter.repo_name}}/lst/: .gitignore  README.MD  requirements.txt  run.py
{{cookiecutter.repo_name}}/lst/deploy/k8/production_yaml/: 02-agilos-kafka-secrets.yaml
{{cookiecutter.repo_name}}/lst/nuhs_lst/utils/: file_utils.py  gen_utils.py
{{cookiecutter.repo_name}}/lst/user_dir/reference/: bed_class_type_mapping.csv
{{cookiecutter.repo_name}}/nuhs_lst/: striker.py  web.py
{{cookiecutter.repo_name}}/nuhs_lst/config/: config.yaml
{{cookiecutter.repo_name}}/nuhs_lst/kafka/: kafka_manager.py  producer.py
{{cookiecutter.repo_name}}/nuhs_lst/utils/: exception_utils.py  timer.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: cli.py
{{cookiecutter.repo_name}}/tests/: __init__.py  kafka_zookeeper.yml  producer_test.py  test_{{cookiecutter.repo_name}}.py
(+5 files in other folders)
